--- a/src/Contact/style.css
+++ b/src/Contact/style.css
@@ -32,3 +32,32 @@
         flex-flow: wrap;
     }
 }
+
+@media (max-width: 780px) {
+    .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        padding: 5px;
+    }
+}
+
+@media (max-width: 480px) {
+    .card {
+      padding: 5px;
+      margin: 5px;
+      flex-direction: column;
+      border: none;
+    }
+
+    .invisibilities {
+        display: none;
+    }
+
+    .icon-contact {
+        font-size: 12px;  
+    }
+
+}
