Alerei o padding do text-1 e o tamanho do subtitle 1 e 2

--- a/src/App.css
+++ b/src/App.css
@@ -175,21 +175,22 @@ footer {
 
 @media (max-width: 480px) {
   .container {
-    padding-top: 100px;
+    padding-top: 150px;
     flex-flow: wrap;
     margin: 0;
   }
 
   .subtitle-1 {
-    font-size: 24px;
+    font-size: 28px;
   }
 
   .subtitle-2{
-    font-size: 24px;
+    font-size: 28px;
   }
 
   .text-1 {
     font-size: 18px;
+    padding: 10px;
   }
 
   .n-container {
